<resources>
    <string-array name="currency_array">
        <item> BTC </item>
        <item> CNY </item>
        <item> LTC </item>
        <item> DOGE </item>
        <item> BC </item>
        <item> DRK </item>
        <item> VRC </item>
        <item> ZET </item>
        <item> BTSX </item>
        <item> NXT </item>
        <item> XRP </item>
        <item> GOOC </item>
    </string-array>
    <string-array name="bank_array">
        <item>建设银行</item>
        <item>支付宝</item>
        <item>工商银行</item>
        <item>农业银行</item>
        <item>中国银行</item>
        <item>交通银行</item>
        <item>广发银行</item>
        <item>民生银行</item>
        <item>中信银行</item>
        <item>平安银行</item>
        <item>兴业银行</item>
        <item>光大银行</item>
        <item>浦发银行</item>
        <item>进出口银行</item>
        <item>华夏银行</item>
        <item>国家开发银行</item>
        <item>招商银行</item>
    </string-array>
    <string-array name="region_array">
        <item>中国</item>
        <item>美国</item>
        <item>其他地区</item>
    </string-array>
    <string-array name="type_array">
        <item>身份证</item>
        <item>护照</item>
    </string-array>
    <string-array name="be_message_array">
        <item>0-请求已成功处理</item>                                 // OK
        <item>1-服务器忙，请稍后再试</item>                            // UNKNOWN

        // User related
        <item>1001-该帐号已存在,请更换帐号注册</item>                   // EMAIL_ALREADY_REGISTERED
        <item>1002-缺少信息，请完善信息后重试</item>                    // MISSING_INFORMATION
        <item>1003-此用户不存在</item>                                // USER_NOT_EXIST
        <item>1004-密码错误</item>                                    // PASSWORD_NOT_MATCH
        <item>1005-验证码错误</item>                                 // TOKEN_NOT_MATCH
        <item>1006-邮箱未验证</item>                                 // EMAIL_NOT_VERIFIED

        // Account related
        <item>2001-价格超出范围</item>                                 // PRICE_OUT_OF_RANGE
        <item>2002-余额不足</item>                                     // INSUFFICIENT_FUND
        <item>2003-数目格式错误</item>                                 // INVALID_AMOUNT
        <item>2007-转帐类型不支持</item>                               // UNSUPPORT_TRANSFER_TYPE

        // Bitway
        <item>8001-地址获取失败，请稍候再试</item>                     // NOT_ENOUGH_ADDRESS_IN_POOL
        <item>8004-地址获取失败，请稍候再试</item>                     // NO_ADDRESS_FOUND
        <item>8005-提现到非法地址</item>                               // WITHDRAWAL_TO_BAD_ADDRESS
        <item>8006-提现地址出错</item>                                 // ADDRESS_FAIL                      // NO_ADDRESS_FOUND or WITHDRAWAL_TO_BAD_ADDRESS

        // Controller and Services
        <item>9001-参数错误</item>                                     // PARAM_EMPTY
        <item>9002-验证码不匹配</item>                                 // CAPTCHA_NOT_MATCH
        <item>9003-邮箱格式不正确</item>                               // INVALID_EMAIL_FORMAT
        <item>9004-密码格式不正确</item>                               // INVALID_PASSWORD_FORMAT
        <item>9005-短信验证码错误</item>                               // SMS_CODE_NOT_MATCH
        <item>9006-手机未验证</item>                                   // MOBILE_NOT_VERIFIED
        <item>9007-短信验证码发送过于频繁，请稍候再试</item>           // SEND_SMS_FREQUENCY_TOO_HIGH
        <item>9009-手机号码格式不正确</item>                           // INVALID_PHONE_NUMBER_FORMAT
        <item>9010-谷歌二次验证码错误</item>                           // INVALID_GOOGLE_VERIFY_CODE
        <item>9012-邮件验证码错误</item>                               // INVALID_EMAIL_VERIFY_CODE
        <item>9013-登陆失败，帐号被锁定，请2小时后再试</item>          // LOGIN_FAILED_AND_LOCKED
    </string-array>
    <string-array name="period_array">
        <item> 1分 </item>
        <item> 3分 </item>
        <item> 5分 </item>
        <item> 15分 </item>
        <item> 30分 </item>
        <item> 1小时 </item>
        <item> 2小时 </item>
        <item> 4小时 </item>
        <item> 6小时 </item>
        <item> 12小时 </item>
        <item> 1天 </item>
        <item> 3天 </item>
        <item> 1周 </item>
    </string-array>
    <string name="general_error">请求失败，请稍后重试</string>
    <string name="app_name">币丰港</string>
    <string name="action_settings">设置</string>
    <string name="action_contact">联系我们</string>
    <string name="action_exit">退出</string>
    <string name="action_about">关于</string>
    <string name="action_help">帮助</string>
    <string name="action_new_version">新版本</string>
    <string name="tab_market">市场</string>
    <string name="tab_trade">交易</string>
    <string name="tab_deposit_withdrawal">充提</string>
    <string name="tab_user">用户</string>
    <string name="activity_fullscreen">全屏</string>
    <string name="exit_hint">再按一次退出程序</string>
    <string name="hello">你好</string>
    <string name="button_ok">确定</string>
    <string name="button_cancel">取消</string>
    <string name="company">币丰港（香港）网络科技有限公司</string>
    <string name="title_activity_splash">SplashActivity</string>
    <string name="title_activity_register">用户注册</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="menu_item_more">更多</string>
    <string name="setting">设置</string>
    <string name="my_setting">我的设置</string>
    <string name="account_manage">账号管理</string>
    <string name="my_favor">个人爱好</string>
    <string name="browsing_record">浏览记录</string>
    <string name="client">客户端</string>
    <string name="feed_back">意见反馈</string>
    <string name="version_detect">检测更新</string>
    <string name="about">关于</string>
    <string name="market_refresh_time">上次更新时间：</string>
    <string name="volume_label">成交量</string>
    <string name="amplitude_label">涨跌幅</string>
    <string name="title_activity_trade">交易</string>
    <string name="hello_world">Hello world!</string>
    <string name="trade_tab_buy_sell">买卖</string>
    <string name="trade_tab_order">挂单</string>
    <string name="trade_tab_tx">历史</string>
    <string name="trade_tab_kline">k线</string>
    <string name="depth_price">出价</string>
    <string name="depth_amount">数量</string>
    <string name="depth_index_buy">买</string>
    <string name="depth_index_sell">卖</string>
    <string name="trade_valid">可用</string>
    <string name="trade_frozen">冻结</string>
    <string name="trade_buy">买入</string>
    <string name="trade_sell">卖出</string>
    <string name="trade_buy_price">买价</string>
    <string name="trade_sell_price">卖价</string>
    <string name="trade_quantity">数量</string>
    <string name="trade_amount">金额</string>
    <string name="order_status_done">完全成交</string>
    <string name="order_status_pending">挂单中</string>
    <string name="order_status_canceled">已撤单</string>
    <string name="pull_to_refresh">下拉可以刷新</string>
    <string name="release_to_refresh">释放立即刷新</string>
    <string name="refreshing">正在刷新…</string>
    <string name="not_updated_yet">暂未更新过</string>
    <string name="updated_at">上次更新于%1$s前</string>
    <string name="last_updated_at">上次更新于: %1$s</string>
    <string name="last_loaded_at">上次加载于: %1$s</string>
    <string name="updated_just_now">刚刚更新</string>
    <string name="time_error">时间有问题</string>
    <string name="order_null">当前没有挂单</string>
    <string name="order_history_null">没有历史挂单</string>
    <string name="deposit_info">请将%1$s汇入以下地址</string>
    <string name="deposit_link">点击充值(需要安装手机钱包)</string>
    <string name="deposit_alias_name">或 %1$s</string>
    <string name="deposit_nxt_pubkey">Public Key: %1$s</string>
    <string name="deposit_memo">填写memo(非常重要)：%1$s</string>
    <string name="deposit_comment">\"转帐内容描述\"请填写成(非常重要)：%1$s</string>
    <string name="deposit_tag">填写Destination tag(非常重要)：%1$s</string>
    <string name="deposit_history_description">最近10笔充值记录:</string>
    <string name="deposit_cny_info_label">充值流程：</string>
    <string name="deposit_cny_flow_step_1">选择并联系代理商</string>
    <string name="deposit_cny_flow_step_2">付款给代理商</string>
    <string name="deposit_cny_flow_step_3">充值成功</string>
    <string name="agent_label">请选择代理商：</string>
    <string name="agent_card_name">户名</string>
    <string name="agent_card_bank">开户行</string>
    <string name="remove_bank_card_title">账户</string>
    <string name="agent_card_account">帐号</string>
    <string name="agent_card_qq">QQ</string>
    <string name="transfer_pending">等待处理</string>
    <string name="transfer_processing">处理中</string>
    <string name="transfer_processed">已处理</string>
    <string name="transfer_succeed">成功</string>
    <string name="transfer_failed">失败</string>
    <string name="transfer_cancelled">已取消</string>
    <string name="transfer_rejected">拒绝</string>
    <string name="btsx_alias">coinport-deposit</string>
    <string name="btsx_address">BTS5FPJkXFwokNEsRLwfWvPKAbzriNLS5ut823rMzHbpKMg9QgYWZ</string>
    <string name="gooc_address">50001</string>
    <string name="nxt_address">17877957575450228524</string>
    <string name="nxt_alias">NXT–FXTE–Q835–9Z5U-H5U8J</string>
    <string name="nxt_pubkey">330a962b2a247fda9a62f10a701222842e057d833fe363b91ab459fc6257ce21</string>
    <string name="xrp_address">r9AzyYGGQAvgefdgeu3eDHaVdxLdpAvchE</string>
    <string name="withdrawal_description_cny">最小提现不能小于 %1$s ，无最大数量限制。 我们会从提现数目中扣除 %2$s 作为手续费。提现请求会在24小时内处理完成。我们的工作时间是香港时间12:00–24:00，周末无休。如有其他问题，请联系客服人员。 (暂不支持信用卡提现)</string>
    <string name="withdrawal_description_btc">最小提现不能小于 %1$s ，无最大数量限制。 我们会从提现数目中扣除 %2$s 作为手续费。提现请求会在24小时内处理完成。我们的工作时间是香港时间12:00–24:00，周末无休。如有其他问题，请联系客服人员。</string>
    <string name="withdrawal_description_btsx">最小提现不能小于 %1$s ，无最大数量限制。 我们会从提现数目中扣除 %2$s 作为手续费。提现请求会在24小时内处理完成。我们的工作时间是香港时间12:00–24:00，周末无休。如有其他问题，请联系客服人员。(BTSX目前只支持使用已注册的帐号提币，比如coinport-deposit)</string>
    <string name="withdrawal_sum_label">可提现%1$s</string>
    <string name="withdrawal_unsupported_hint">币丰港app测试版只支持邮箱验证进行提现。您绑定了手机验证或谷歌二次验证，请使用网页版进行提现。谢谢您的理解！</string>
    <string name="withdrawal_history_description">最近10笔提现记录:</string>
    <string name="withdrawal_select_bank_card">选择银行卡</string>
    <string name="withdrawal_add_bank_card">添加</string>
    <string name="withdrawal_address">提现地址</string>
    <string name="withdrawal_amount">提现数量</string>
    <string name="withdrawal_memo">Memo</string>
    <string name="withdrawal_nxt_pubkey">Public Key</string>
    <string name="withdrawal_nxt_pubkey_description">没有可不填，地址首次使用请填写</string>
    <string name="withdrawal_email_code">Email验证码</string>
    <string name="withdrawal_google_auth_code">谷歌二次验证码</string>
    <string name="withdrawal_sms_code">短信验证码</string>
    <string name="withdrawal_send_email_code">获取</string>
    <string name="withdrawal_abc_title">添加银行卡</string>
    <string name="withdrawal_abc_description">（银行卡的开户名必须和实名认证的真实姓名一致）</string>
    <string name="withdrawal_abc_name">户名</string>
    <string name="withdrawal_abc_account">帐号</string>
    <string name="withdrawal_abc_bank">开户行</string>
    <string name="withdrawal_abc_branch_bank">开户支行</string>
    <string name="withdrawal_abc_email_code">Email验证码</string>
    <string name="withdrawal_abc_ok">确定</string>
    <string name="withdrawal_abc_cancel">取消</string>
    <string name="withdrawal_abc_delete">删除</string>
    <string name="withdrawal_action">提现</string>
    <string name="withdrawal_succeed">提现请求已成功发出，请下拉刷新查看记录</string>
    <string name="withdrawal_cny_verification_requirement">需要进行实名认证才能提现人民币</string>
    <string name="user_secure_verify">实名认证</string>
    <string name="asset_sum">总资产</string>
    <string name="asset_sum_cny">%1$s\tCNY</string>
    <string name="asset_sum_btc">%1$s\tBTC</string>
    <string name="asset_currency">币种</string>
    <string name="asset_valid">可用金额</string>
    <string name="asset_pending">冻结金额</string>
    <string name="bind_phone_country">国家</string>
    <string name="bind_phone_num">手机号码</string>
    <string name="bind_phone_verify_code">短信验证码</string>
    <string name="register_email">登陆邮箱</string>
    <string name="register_pw">密码</string>
    <string name="register_pw_confirm">确认密码</string>
    <string name="register_claim">我已阅读并同意：</string>
</resources>