<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:tools="http://schemas.android.com/tools"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:layout_marginTop="8dip"
              android:layout_marginBottom="8dip"
              android:layout_marginLeft="8dip"
              android:layout_marginRight="8dip"
              android:background="@drawable/background_card"
              android:orientation="vertical"
              tools:context="com.coinport.odin.activity.BindPhoneActivity">
    <LinearLayout
        android:paddingTop="10dip"
        android:paddingLeft="4dip"
        android:paddingRight="4dip"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <TextView
            android:paddingRight="4dip"
            android:layout_width="80dip"
            android:layout_height="wrap_content"
            android:gravity="right"
            android:text="@string/bind_phone_country"/>
        <Spinner
            android:layout_marginLeft="4dip"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content">

        </Spinner>
    </LinearLayout>
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="4dip"
        android:paddingRight="4dip"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <TextView
            android:layout_width="80dip"
            android:layout_height="wrap_content"
            android:paddingRight="4dip"
            android:gravity="right"
            android:text="@string/bind_phone_num"/>
        <EditText
            android:layout_marginLeft="4dip"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="4dip"
        android:paddingRight="4dip"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <TextView
            android:layout_width="80dip"
            android:layout_height="wrap_content"
            android:paddingRight="4dip"
            android:gravity="right"
            android:text="@string/bind_phone_verify_code"/>
        <EditText
            android:layout_marginLeft="4dip"
            android:layout_width="150dip"
            android:layout_height="wrap_content"/>
        <Button
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/withdrawal_send_email_code"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="4dip"
        android:paddingRight="4dip"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <Button
            style="@style/ButtonGreen"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/button_ok"/>
        <Button
            style="@style/ButtonRed"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/button_cancel"/>
    </LinearLayout>
</LinearLayout>
