<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent">
    <com.coinport.odin.library.ptr.PullToRefreshScrollView
        xmlns:ptr="http://schemas.android.com/apk/res-auto"
        android:scrollbars="none"
        android:layout_marginTop="8dip"
        android:layout_marginBottom="8dip"
        android:layout_marginLeft="8dip"
        android:layout_marginRight="8dip"
        android:background="@drawable/background_card"
        android:orientation="vertical"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:id="@+id/refreshable_view"
        android:dividerHeight="4dip"
        ptr:ptrAnimationStyle="flip">
        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="4dip"
            android:paddingRight="4dip"
            android:orientation="vertical">
            <LinearLayout
                android:layout_marginTop="4dip"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="50dip"
                    android:layout_height="wrap_content"
                    android:text="@string/asset_sum"/>
                <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:gravity="right"
                    android:orientation="vertical">
                    <TextView
                        android:id="@+id/asset_sum_cny"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/asset_sum_cny"/>
                    <TextView
                        android:id="@+id/asset_sum_btc"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/asset_sum_btc"/>
                </LinearLayout>
            </LinearLayout>
            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dip"
                android:orientation="horizontal"
                android:background="@drawable/textview_underline">
                <TextView
                    android:layout_width="60dip"
                    android:layout_height="wrap_content"
                    android:text="@string/asset_currency"/>
                <TextView
                    android:layout_width="0dip"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:text="@string/asset_valid"/>
                <TextView
                    android:layout_width="0dip"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:text="@string/asset_pending"/>
            </LinearLayout>
            <com.coinport.odin.layout.NestedListView
                android:focusable="false"
                android:id="@+id/assets"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content">
            </com.coinport.odin.layout.NestedListView>
        </LinearLayout>
    </com.coinport.odin.library.ptr.PullToRefreshScrollView>
</LinearLayout>
