<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent">
    <LinearLayout
        android:id="@+id/unsupported_hint"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="8dip"
        android:layout_marginBottom="8dip"
        android:layout_marginLeft="8dip"
        android:layout_marginRight="8dip"
        android:background="@drawable/background_card"
        android:orientation="vertical"
        android:visibility="gone">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="100dip"
            android:layout_marginBottom="20dip"
            android:gravity="center"
            android:text="@string/withdrawal_unsupported_hint"/>
    </LinearLayout>
    <LinearLayout
        android:id="@+id/verification_hint"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="8dip"
        android:layout_marginBottom="8dip"
        android:layout_marginLeft="8dip"
        android:layout_marginRight="8dip"
        android:background="@drawable/background_card"
        android:orientation="vertical"
        android:visibility="gone">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="100dip"
            android:layout_marginBottom="20dip"
            android:gravity="center"
            android:text="@string/withdrawal_cny_verification_requirement"/>
        <Button
            android:id="@+id/realname_verify"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/user_secure_verify"/>
    </LinearLayout>
    <com.coinport.odin.library.ptr.PullToRefreshScrollView
        xmlns:ptr="http://schemas.android.com/apk/res-auto"
        android:scrollbars="none"
        android:layout_marginTop="8dip"
        android:layout_marginBottom="8dip"
        android:layout_marginLeft="8dip"
        android:layout_marginRight="8dip"
        android:background="@drawable/background_card"
        android:orientation="vertical"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:id="@+id/refreshable_view"
        android:dividerHeight="4dip"
        ptr:ptrAnimationStyle="flip">
        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="4dip"
            android:paddingRight="4dip"
            android:orientation="vertical">
            <LinearLayout
                android:layout_marginTop="4dip"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <TextView
                    android:id="@+id/withdrawal_description"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="4dip"
                    android:background="@drawable/red_input_border"/>
                <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical"
                    android:layout_marginTop="4dip"
                    android:layout_marginBottom="4dip"
                    android:orientation="horizontal">
                    <TextView
                        android:id="@+id/withdrawal_sum_label"
                        android:layout_width="80dip"
                        android:layout_height="wrap_content"
                        android:text="@string/withdrawal_sum_label"/>
                    <TextView
                        android:id="@+id/withdrawal_sum"
                        android:paddingLeft="3dip"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"/>
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/withdrawal_bank_card_selector"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical"
                    android:orientation="horizontal">
                    <TextView
                        android:layout_width="80dip"
                        android:layout_height="wrap_content"
                        android:text="@string/withdrawal_select_bank_card"/>
                    <com.coinport.odin.layout.BankCardSpinner
                        android:id="@+id/bank_card_spinner"
                        android:layout_width="150dip"
                        android:layout_height="wrap_content"/>
                    <Button
                        android:id="@+id/withdrawal_add_bank_card"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/withdrawal_add_bank_card"/>
                </LinearLayout>
                <LinearLayout
                    android:id="@+id/withdrawal_address"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical"
                    android:orientation="horizontal">
                    <TextView
                        android:layout_width="80dp"
                        android:layout_height="wrap_content"
                        android:text="@string/withdrawal_address"/>
                    <LinearLayout
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:focusable="true"
                        android:focusableInTouchMode="true">
                        <EditText
                            android:id="@+id/withdrawal_address_edit"
                            android:layout_width="fill_parent"
                            android:layout_height="wrap_content"/>
                    </LinearLayout>
                </LinearLayout>
                <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical"
                    android:orientation="horizontal">
                    <TextView
                        android:layout_width="80dp"
                        android:layout_height="wrap_content"
                        android:text="@string/withdrawal_amount"/>
                    <LinearLayout
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:focusable="true"
                        android:focusableInTouchMode="true">
                        <EditText
                            android:id="@+id/withdrawal_amount_edit"
                            android:layout_width="fill_parent"
                            android:layout_height="wrap_content"/>
                    </LinearLayout>
                </LinearLayout>
                <LinearLayout
                    android:id="@+id/withdrawal_memo"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical"
                    android:orientation="horizontal">
                    <TextView
                        android:id="@+id/withdrawal_memo_label"
                        android:layout_width="80dp"
                        android:layout_height="wrap_content"
                        android:text="@string/withdrawal_memo"/>
                    <EditText
                        android:id="@+id/withdrawal_memo_edit"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"/>
                </LinearLayout>
                <TextView
                    android:id="@+id/withdrawal_nxt_pubkey_description"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="80dip"
                    android:text="@string/withdrawal_nxt_pubkey_description"/>
                <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical"
                    android:orientation="horizontal">
                    <TextView
                        android:layout_width="80dp"
                        android:layout_height="wrap_content"
                        android:text="@string/withdrawal_email_code"/>
                    <EditText
                        android:id="@+id/withdrawal_emailcode_edit"
                        android:layout_width="150dp"
                        android:layout_height="wrap_content"/>
                    <Button
                        android:id="@+id/get_withdrawal_email_code"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/withdrawal_send_email_code"/>
                </LinearLayout>
            </LinearLayout>
            <Button
                android:id="@+id/withdrawal_action"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/withdrawal_action"/>
            <TextView
                android:layout_marginTop="10dip"
                android:layout_marginLeft="4dip"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/withdrawal_history_description"/>
            <com.coinport.odin.layout.NestedListView
                android:focusable="false"
                android:id="@+id/withdrawal_history"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content">
            </com.coinport.odin.layout.NestedListView>
        </LinearLayout>
    </com.coinport.odin.library.ptr.PullToRefreshScrollView>
</LinearLayout>