<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:tools="http://schemas.android.com/tools"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:layout_marginTop="8dip"
              android:layout_marginBottom="8dip"
              android:layout_marginLeft="8dip"
              android:layout_marginRight="8dip"
              android:background="@drawable/background_card"
              android:orientation="vertical"
              tools:context="com.coinport.odin.activity.RegisterActivity">
    <LinearLayout
        android:paddingTop="10dip"
        android:paddingLeft="4dip"
        android:paddingRight="4dip"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:paddingRight="4dip"
            android:layout_width="80dip"
            android:layout_height="wrap_content"
            android:gravity="right"
            android:text="@string/register_email"/>
        <EditText
            android:layout_marginLeft="4dip"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="4dip"
        android:paddingRight="4dip"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <TextView
            android:layout_width="80dip"
            android:layout_height="wrap_content"
            android:paddingRight="4dip"
            android:gravity="right"
            android:text="@string/register_pw"/>
        <EditText
            android:layout_marginLeft="4dip"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="4dip"
        android:paddingRight="4dip"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <TextView
            android:layout_width="80dip"
            android:layout_height="wrap_content"
            android:paddingRight="4dip"
            android:gravity="right"
            android:text="@string/register_pw_confirm"/>
        <EditText
            android:layout_marginLeft="4dip"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="90dip"
        android:paddingRight="4dip"
        android:layout_marginBottom="4dip"
        android:gravity="center_vertical"
        android:orientation="horizontal">
        <CheckBox
            android:id="@+id/remember_pw"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@null"
            android:button="@null"
            android:checked="true"
            android:drawableLeft="@drawable/checkbox_bg"
            android:paddingTop="2dp"
            android:text="@string/register_claim"
            android:textSize="12sp" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/register_rule"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="4dip"
        android:paddingRight="4dip"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <Button
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/button_ok"/>
        <Button
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/button_cancel"/>
    </LinearLayout>
</LinearLayout>
